--- a/Submission/assets/style.css
+++ b/Submission/assets/style.css
@@ -363,7 +363,7 @@ header .navbar a:hover{
 }
 
 .project-section {
-  margin-top: 4.25rem;
+  margin: 4.25rem 0 9.25rem 0;
   row-gap: 2rem;
 }
 
@@ -436,7 +436,7 @@ header .navbar a:hover{
 
 /*contact.html*/
 .contact-section{
-  margin-top: 9.25rem;
+  margin: 9.25rem 0;
 }
 
 .contact_input {
